SVN Update# 2459 by ntoskrnl: ServUp.co.il - minor optimizations